tests/ui/alloc-error/alloc-error-handler-bad-signature-3.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/alloc-error-handler-bad-signature-3.rs:10:1
   |
LL |   #[alloc_error_handler]
   |   ---------------------- in this procedural macro expansion
LL |   fn oom() -> ! {
   |  _-^^^^^^^^^^^^
LL | |     loop {}
LL | | }
   | |_- unexpected argument of type `core::alloc::Layout`
   |
note: function defined here
  --> $DIR/alloc-error-handler-bad-signature-3.rs:10:4
   |
LL | fn oom() -> ! {
   |    ^^^
   = note: this error originates in the attribute macro `alloc_error_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
